--- a/altacv.cls
+++ b/altacv.cls
@@ -286,7 +286,7 @@
   \textbf{\color{accent}#2}\par
   \smallskip}
   \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendar~#3}}}%
-  \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{\faMapMarker~#4}}}\par
+  \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{~#4}}}\par
   \medskip\normalsize
 }
 
