Updated projects and added github links

--- a/sample.tex
+++ b/sample.tex
@@ -65,7 +65,7 @@
   % Not all of these are required!
   \email{ella.soccoli@mail.rit.edu}
   %\phone{000-00-0000}
-  %\homepage{www.homepage.com}
+  \homepage{esoccoli.github.io}
   \linkedin{ella-soccoli}
   \github{esoccoli}
 }
@@ -88,7 +88,7 @@
 
 \cvsection{Projects}
 
-\cvevent{Brick Breaker}{C\#, Monogame, .NET Core, Visual Studio}{}{}
+\cvevent{Brick Breaker}{C\#, Monogame, .NET Core, Visual Studio}{September 2022 - Present}{\github{esoccoli/BrickBreaker}}
 \begin{itemize}
   \item Developed a custom Brick Breaker game in C\# using the Monogame framework.
   \item Implemented a collision detection system to detect collisions between the ball, bricks, and paddle.
@@ -97,7 +97,7 @@
 
 \divider
 
-\cvevent{NewUHC}{Java, Kotlin, PaperMC, IntelliJ IDEA}{}{}
+\cvevent{NewUHC}{Java, Kotlin, PaperMC, IntelliJ IDEA}{December 2022 - Present}{\github{esoccoli/NewUHC}}
 \begin{itemize}
   \item Created a custom Minecraft plugin for a PaperMC server using Java and Kotlin.
   \item Acquired knowledge of the PaperMC API and used it to create custom events and commands.
@@ -106,19 +106,19 @@
 
 \divider
 
-\cvevent{Personal Website}{HTML, CSS, JavaScript, Bootstrap, Github Pages}{}{}
+\cvevent{Space Invader}{C\#, Monogame, .NET Core, Visual Studio}{December 2022 - Present}{\github{esoccoli/SpaceInvader}}
 \begin{itemize}
-  \item Designed a website to display my resume and portfolio using HTML, CSS, and JavaScript.
-  \item Implemented responsive page elements using Bootstrap and Javascript.
-  \item Heightened knowledge of Javascript and HTML media queries.
+  \item Expanded knowledge of C\# and Monogame by creating a Space Invader game.
+  \item Discovered new techniques for managing large projects, such as breaking it into small tasks and using a task manager.
 \end{itemize}
 
 \divider
 
-\cvevent{Space Invader}{C\#, Monogame, .NET Core, Visual Studio}{}{}
+\cvevent{Personal Website}{HTML, CSS, JavaScript, Bootstrap, Github Pages}{January 2023 - Present}{\github{esoccoli/esoccoli.github.io}}
 \begin{itemize}
-  \item Expanded knowledge of C\# and Monogame by creating a Space Invader game.
-  \item Discovered new techniques for managing large projects, such as breaking it into small tasks and using a task manager.
+  \item Designed a website to display projects and activities using HTML, CSS, and Bootstrap 5.
+  \item Heightened knowledge of HTML and CSS and their uses in web development.
+  \item Began learning about media queries, with the aim of implementing them here later.
 \end{itemize}
 
 \switchcolumn
@@ -131,13 +131,14 @@
 \cvtag{HTML}
 \cvtag{CSS}
 \cvtag{Javascript}
+\cvtag{Bootstrap}
 
 \divider
 
 \cvtag{Git/Github}
 \cvtag{Visual Studio}
 \cvtag{IntelliJ IDEA}
-\cvtag{Visual Studio Code}
+%\cvtag{Visual Studio Code}
 \cvtag{Monogame}
 \cvtag{Windows 10/11}
 \cvtag{.NET Core}
